--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
   <li><a href="week8.html" target="_blank">Завдання 8-го тижня</a></li>
   <li><a href="week9.html" target="_blank">Завдання 9-го тижня</a></li>
   <li><a href="week10.html" target="_blank">Завдання 10-го тижня</a></li>
+  <li><a href="week11.html" target="_blank">Завдання 11-го тижня</a></li>
+  <li><a href="week12.html" target="_blank">Завдання 12-го тижня</a></li>
+  <li><a href="week13.html" target="_blank">Завдання 13-го тижня</a></li>
+  <li><a href="week14.html" target="_blank">Завдання 14-го тижня</a></li>
+  <li><a href="week15.html" target="_blank">Завдання 15-го тижня</a></li>
+  <li><a href="week16.html" target="_blank">Завдання 16-го тижня</a></li>
   
   </ol>
   
