--- a/week2.html
+++ b/week2.html
@@ -10,6 +10,6 @@
     <a-cylinder color="white" height="2.370" radius="0.05" position="-2.526 -0.767 -5"></a-cylinder>
     <a-torus-knot color="black" radius="1.2" position="-3 1 -5" animation="property: rotation; to: 0 0 360; loop: true; dur: 5000"></a-torus-knot>
     <a-plane src="https://cdn.pixabay.com/photo/2021/08/25/20/42/field-6574455__340.jpg" width="9.740" height="5.180" position="4.025 2.915 -7.420"></a-plane>
-    <a-text value="Suren Kostuk Костюк Сурен" font="bikham-cyr-script_[uk.allfont.net]-msdf.json" negate="false" color="red" width="7.8" position="1.609 3.072 -5.434" rotation="0 0 0" animation="property: rotation; to: 0 0 -360; loop: true; dur: 5000"></a-text>
+    <a-text value="Костюк Сурен" font="Cyrillic_Goth_Normal-msdf.json" negate="false" color="red" width="7.8" position="1.609 3.072 -5.434" rotation="0 0 0" animation="property: rotation; to: 0 0 -360; loop: true; dur: 5000"></a-text>
   </a-scene> 
 </html>
